--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,5 +17,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
       - name: Run a one-line script
         run: curl -i -L -s -u username:foobar https://api.github.com/repos/ko-build/ko/releases/latest
